Work around `accept_modal` quirks
Prior to this change, calling a Capybara modal helper like
[accept_alert][] would raise an error like:

```
Selenium::WebDriver::Error::UnexpectedAlertOpenError: unexpected alert open: {Alert text : Are you sure?}
```

To resolve that issue, skip accessibility auditing for the duration of
the block, then execute an audit when the block is finished being
executed.

[accept_alert]: https://rubydoc.info/github/teamcapybara/capybara/master/Capybara/Session:accept_alert

--- a/test/dummy/app/views/violations/index.html.erb
+++ b/test/dummy/app/views/violations/index.html.erb
@@ -11,6 +11,10 @@
 
     <button>Submit</button>
   </form>
+
+  <button type="button" onclick="alert('<%= params.fetch(:alert, "Alert!") %>')">Open alert</button>
+  <button type="button" onclick="confirm('<%= params.fetch(:confirm, "Confirm?") %>')">Open confirm</button>
+  <button type="button" onclick="prompt('<%= params.fetch(:prompt, "Hello?") %>')">Open prompt</button>
 <% end %>
 
 <% if @violations.label? %>
